[package]
name = "dialoguer"
description = "A command line prompting library."
version = "0.8.0"
edition = "2018"
authors = [
	"Armin Ronacher <armin.ronacher@active-4.com>",
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
keywords = ["cli", "menu", "prompt"]
categories = ["command-line-interface"]
license = "MIT"
homepage = "https://github.com/mitsuhiko/dialoguer"
repository = "https://github.com/mitsuhiko/dialoguer"
documentation = "https://docs.rs/dialoguer"
readme = "README.md"

[dependencies]
console = "0.14.1"
fuzzy-matcher = { version = "0.3.7", optional = true }
lazy_static = "1.4.0"
tempfile = "3.2.0"
zeroize = "1.2.0"
rustyline = "8.0.0"

# [patch.crates-io]
# console = { path = "../../lib/console" }
# console = { git = "https://github.com/ttys3/console.git", version = "0.15.0" }

[features]
fuzzy-select = ["fuzzy-matcher"]

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "fuzzyselect"
path = "examples/fuzzyselect.rs"
